fix cta spacing

--- a/src/components/callToAction/CallToAction.scss
+++ b/src/components/callToAction/CallToAction.scss
@@ -12,6 +12,15 @@
   }
 }
 
+.cta-section {
+  padding-top: 96px;
+}
+
+.cta-section hr {
+  margin-top: 96px;
+  margin-bottom: 0;
+}
+
 .cta-link:not(.inline) {
   display: flex;
   position: relative;
