--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,3 +1,4 @@
 .site-footer {
-  padding: 96px 0;
+  padding-top: 32px;
+  padding-bottom: 96px;
 }
